# sqla-pagination

./: README.md  pyproject.toml
.github/workflows/: testing.yaml
examples/: rest_api.py  simple.py
sqlalchemy_pagination/: __init__.py  exceptions.py  page.py  utils.py
sqlalchemy_pagination/paginators/: base.py
sqlalchemy_pagination/paginators/join_based/: paginator.py
sqlalchemy_pagination/paginators/keyset/: page.py  paginator.py
sqlalchemy_pagination/paginators/keyset/inspection/: columns.py
sqlalchemy_pagination/paginators/keyset/inspection/performance/: indexes.py
sqlalchemy_pagination/paginators/keyset/utils/: ordering.py
sqlalchemy_pagination/paginators/limit_offset/: page.py  paginator.py
sqlapagination/: __init__.py  constants.py
sqlapagination/paginators/: base.py
sqlapagination/paginators/join_based/: __init__.py  paginator.py
sqlapagination/paginators/keyset/: __init__.py  page.py  paginator.py
sqlapagination/paginators/keyset/inspection/: columns.py
sqlapagination/paginators/keyset/utils/: ordering.py
sqlapagination/paginators/limit_offset/: __init__.py  page.py  paginator.py
tests/: conftest.py
tests/unit/keyset/: test_keyset_paginator.py
